Force disable PDF plugin

--- a/patch/patch.cfg
+++ b/patch/patch.cfg
@@ -744,5 +744,9 @@ patches = [
     # Windows: Add missing check in base/profiler/stack_copier.cc to fix
     # compilation error of cef_sandbox.
     'name': 'win_sandbox_stack_copier'
+  },
+  {
+    # Force disable PDF plugin, but still build it with enable_pdf=true
+    'name': 'zz_force_disable_pdf_plugin'
   }
 ]
